--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lodash": "^4.17.21",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
