--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^2.5.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "pdfkit": "^0.16.0",
     "qrcode": "^1.5.4",
