--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "react-to-pdf": "^1.0.1",
+    "socket.io-client": "^4.8.1",
     "three": "^0.173.0"
   },
   "devDependencies": {
